copied the asm code injector from poc